--- a/css/style.less
+++ b/css/style.less
@@ -550,7 +550,7 @@ header{
                     }
 
                     .links{
-                        img{
+                        a{
                             &:not(:last-child){
                                 margin-right: 19px;
                             }
