--- a/css/style.css
+++ b/css/style.css
@@ -518,7 +518,7 @@ header .block .right a {
   opacity: 0.6;
   margin-bottom: 12px;
 }
-.sec9 .block .about-the-store .text a {
+.sec9 .block .about-the-store .text .link {
   display: inline-block;
   font-weight: 500;
   font-size: 14px;
@@ -526,7 +526,10 @@ header .block .right a {
   color: #FFFFFF;
   margin-bottom: 10px;
 }
-.sec9 .block .about-the-store .text .links a:not(:last-child) {
+.sec9 .block .about-the-store .text .links .link-logos {
+  display: inline-block;
+}
+.sec9 .block .about-the-store .text .links .link-logos:not(:last-child) {
   margin-right: 19px;
 }
 .df {
